Added backup files.

--- a/config.org
+++ b/config.org
@@ -697,6 +697,13 @@ Taken from https://tecosaur.github.io/emacs-config/config.html
 #+begin_src emacs-lisp :tangle yes
 (setq-default delete-by-moving-to-trash t)
 #+end_src
+*** Make backups
+#+begin_src emacs-lisp :tangle yes
+(setq-default make-backup-files t
+              version-control t
+              delete-old-versions t
+              create-lockfiles nil)
+#+end_src
 
 ** Meow
 Set some defaults
