--- a/config.org
+++ b/config.org
@@ -1058,6 +1058,26 @@ Set meow's initial mode for various major modes
 (use-package! aggressive-indent
   :hook (doom-first-file . global-aggressive-indent-mode))
 #+end_src
+** Reapeat-Fu
+#+begin_src emacs-lisp :tangle packages.el
+(package! repeat-fu)
+#+end_src
+
+#+begin_src emacs-lisp :tangle yes
+(use-package! repeat-fu
+  :commands (repeat-fu-mode repeat-fu-execute)
+
+  :config
+  (setq repeat-fu-preset 'meow)
+
+  :hook
+  ((meow-mode)
+   .
+   (lambda ()
+     (when (and (not (minibufferp)) (not (derived-mode-p 'special-mode)))
+       (repeat-fu-mode)
+       (define-key meow-normal-state-keymap (kbd "'") 'repeat-fu-execute)))))
+#+end_src
 
 * Emacs
 ** Undo
@@ -1982,10 +2002,12 @@ https://github.com/marcinkoziej/org-pomodoro/issues/89#issuecomment-1058725921
     ;; preselect the prompt when creating a new note
     (add-to-list 'vertico-multiform-commands '(denote-open-or-create (vertico-preselect . prompt)))
     (add-to-list 'vertico-multiform-commands '(denote (vertico-preselect . prompt))))
+  ;; word wrap backlinks and query buffers
   (when (modulep! word-wrap)
     (add-to-list '+word-wrap-text-modes 'denote-query-mode))
   (denote-rename-buffer-mode 1))
 #+end_src
+
 
 
 ***** Consult Denote
