--- a/config.org
+++ b/config.org
@@ -250,7 +250,7 @@
 ;; they are implemented.
 #+end_src
 ** Package
-#+begin_src emacs-lisp :tangle yes
+#+begin_src emacs-lisp :tangle packages.el
 ;; -*- no-byte-compile: t; -*-
 ;;; $DOOMDIR/packages.el
 
@@ -303,6 +303,15 @@
 #+end_src
 * Input
 * Completion
+** Minibuffer
+*** COMMENT Ignore case
+
+#+begin_src emacs-lisp :tangle yes
+(setq read-file-name-completion-ignore-case t
+      completion-ignore-case t
+      read-buffer-completion-ignore-case t)
+#+end_src
+
 * UI
 ** Doom Dashboard
 *** Set splash image and randomize
@@ -851,10 +860,12 @@ Set meow's initial mode for various major modes
 (use-package! embrace
   :commands embrace-commander
   :hook (LaTex-mode . embrace-LaTex-mode-hook)
-  ;; :hook (org-mode . embrace-org-mode-hook)
+  :hook (org-mode . embrace-org-mode-hook)
   :hook (ruby-mode . embrace-ruby-mode-hook)
   :hook (emacs-lisp-mode . embrace-emacs-lisp-mode-hook))
 #+end_src
+
+
 ** COMMENT Surround
 
 #+begin_src emacs-lisp :tangle packages.el
