Removed childframe flag for corfu (already uses childframes)

--- a/config.org
+++ b/config.org
@@ -28,8 +28,7 @@
        :completion
        ;;company           ; the ultimate code completion backend
        (corfu +orderless
-              +icons
-              +childframe)  ; complete with cap(f), cape and a flying feather!
+              +icons)  ; complete with cap(f), cape and a flying feather!
        ;;helm              ; the *other* search engine for love and life
        ;;ido               ; the other *other* search engine...
        ;;ivy               ; a search engine for love and life
