--- a/config.org
+++ b/config.org
@@ -631,6 +631,12 @@ Taken from https://tecosaur.github.io/emacs-config/config.html
 (use-package! consult-todo
   :after (consult hl-todo))
 #+end_src
+** Nerd Icons
+*** Add nerd icon keybinding
+#+begin_src emacs-lisp :tangle yes
+(map! :map doom-leader-insert-map
+      :desc "Nerd Icon" "n" #'nerd-icons-insert)
+#+end_src
 
 * Editor
 ** Line Numbers
